--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "node": ">= 12.1 <13"
   },
   "devDependencies": {
-    "@tsconfig/node12": "^1.0.7",
     "@types/jest": "~26.0.10",
     "@types/node": "^12.12.62",
     "@typescript-eslint/eslint-plugin": "~3.9.1",
@@ -17,19 +16,25 @@
     "jest": "~26.4.2",
     "prettier": "~2.0.5",
     "rimraf": "~3.0.2",
-    "ts-jest": "~26.2.0",
+    "ts-jest": "~26.4.0",
+    "ts-loader": "^8.0.4",
     "tsutils": "~3.17.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^5.1.4"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "build:dev:webpack": "webpack --config webpack.dev.js",
+    "build:prod:webpack": "webpack --config webpack.prod.js"
   },
   "author": "Huy, Tae Young Kim <kty1965@gmail.com>",
-  "license": "MIT License",
+  "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.758.0",
     "js-base64": "^3.5.2",
